2007-12-13  Frederic Peters  <fpeters@0d.be>

	* jhbuild/moduleset.py, jhbuild/versioncontrol/__init__.py,
	jhbuild/versioncontrol/tarball.py: sync patch lookup features from
	tarball modtype to versioncontrol tarball; possibility to specify
	a full URL for patch files, or looking it up in moduleset directory
	or in a patches/ subdirectory of that one.

2007-12-12  William Jon McCann  <mccann@jhu.edu>

	* modulesets/gnome-suites-2.22.modules: Suggest libnotify for
	gnome-screensaver.

	* modulesets/gnome-suites-2.20.modules: use gnome-2-20 branch of
	gnome-screensaver and nautilus-cd-burner.

2007-12-12  Owen Taylor  <otaylor@redhat.com>

	* modulesets/online-desktop.modules: Add dbus-glib as a
	dependency of dbus-python (Will LaShell)

2007-12-09  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/gnome-suites-2.22.modules: Use the trunk branch of 
	libsigc++.

2007-12-05  Murray Cumming  <murrayc@murrayc.com>

	* jhbuild/gnome-2.22.modules: Added avahi-newer and libdaemon-newer 
	and made libepc dependent on them, because it needs avahi-ui, only 
	available sice avahi 2.18, and the main GNOME external dependency 
	version has not been increased yet. Actually, libepc only needs it 
	for the examples, but Glom really needs it.
	Do remove this hack if it disturbs an official GNOME module.

2007-12-04  Marco Barisione  <marco@barisione.org>

	* jhbuild/versioncontrol/darcs.py: explicitly pull from the original
	repository (closes: #501538)

2007-12-04  Frederic Crozat  <fcrozat@mandriva.com>

	* modulesets/gnome-suites-2.22.modules: gnome-keyring needs libtasn1.

2007-12-04  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.20.modules: use gnome-2-20 branch of
	gnome-terminal.

2007-12-03  Christian Persch  <chpe@gnome.org>

	* modulesets/gnome-2.18.modules:
	* modulesets/gnome-suites-2.20.modules: Use gnome-2-20 branch of
	gucharmap.

2007-12-03  Don Scorgie  <dscorgie@svn.gnome.org>

	* modulesets/gnome-external-deps-2.22.modules: 