@@ -1,5 +1,14 @@
 2007-12-13  Frederic Peters  <fpeters@0d.be>
 
+	* jhbuild/commands/__init__.py, jhbuild/commands/autobuild.py,
+	jhbuild/commands/base.py, jhbuild/commands/bootstrap.py,
+	jhbuild/commands/checkbranches.py, jhbuild/commands/gui.py,
+	jhbuild/main.py: introspect commands to get their name and
+	description for --help-commands, patch by John Stowers, slightly
+	edited by myself.  (closes: #503491)
+
+2007-12-13  Frederic Peters  <fpeters@0d.be>
+
 	* jhbuild/moduleset.py, jhbuild/versioncontrol/__init__.py,
 	jhbuild/versioncontrol/tarball.py: sync patch lookup features from
 	tarball modtype to versioncontrol tarball; possibility to specify
